force-app/main/default/objects/Vehicle__c/fields/Legal_Recalculation_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Legal_Recalculation_Requested_Date__c</fullName>
    <label>Legal Recalculation Requested Date</label>
    <type>Date</type>
</CustomField>