force-app/main/default/objects/Vehicle__c/fields/License_plate__c.field-meta.xml
<CustomField>
    <fullName>License_plate__c</fullName>
    <label>License plate</label>
    <length>18</length>
    <type>Text</type>
</CustomField>