force-app/main/default/objects/Vehicle__c/fields/License_Plate_Invoice_Sent__c.field-meta.xml
<CustomField>
    <fullName>License_Plate_Invoice_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Invoice request for License Plate cost has been send to Navision</description>
    <inlineHelpText>Invoice request for License Plate cost has been send to Navision</inlineHelpText>
    <label>License Plate Invoice Sent</label>
    <type>Checkbox</type>
</CustomField>