force-app/main/default/objects/Vehicle__c/fields/License_Plate_Is_Not_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>License_Plate_Is_Not_Invoiced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>License Plate invoice process was run, but because of related Dealer we are not sending invoice (e.g. Dealer is out of DK)</description>
    <inlineHelpText>License Plate invoice process was run, but because of related Dealer we are not sending invoice (e.g. Dealer is out of DK)</inlineHelpText>
    <label>License Plate Is Not Invoiced</label>
    <type>Checkbox</type>
</CustomField>