force-app/main/default/objects/Vehicle__c/fields/License_Plate_System__c.field-meta.xml
<CustomField>
    <fullName>License_Plate_System__c</fullName>
    <description>License Plate / Registration Number in official format used with SKAT and with external communication or integration</description>
    <externalId>true</externalId>
    <inlineHelpText>License Plate / Registration Number in official format used with SKAT</inlineHelpText>
    <label>License Plate (System)</label>
    <length>8</length>
    <type>Text</type>
</CustomField>