force-app/main/default/objects/Vehicle__c/fields/licensePlateCost__c.field-meta.xml
<CustomField>
    <fullName>licensePlateCost__c</fullName>
    <label>License Plate Cost</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>