force-app/main/default/objects/Vehicle__c/fields/Life_start__c.field-meta.xml
<CustomField>
    <fullName>Life_start__c</fullName>
    <label>Life start</label>
    <length>250</length>
    <type>Text</type>
</CustomField>