force-app/main/default/objects/Vehicle__c/fields/Link_to_Retail_Website__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Retail_Website__c</fullName>
    <description>ling to navigate to the vehicle on SIXT Retail Sales Website</description>
    <inlineHelpText>ling to navigate to the vehicle on SIXT Retail Sales Website</inlineHelpText>
    <label>Link to Retail Website</label>
    <type>Url</type>
</CustomField>