force-app/main/default/objects/Vehicle__c/fields/Mail_skadestjek_bestil__c.field-meta.xml
<CustomField>
    <fullName>Mail_skadestjek_bestil__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Er der sendt mail og bestilt skadestjek?</description>
    <inlineHelpText>Er der sendt mail og bestilt skadestjek?</inlineHelpText>
    <label>Mail skadestjek bestilt</label>
    <type>Checkbox</type>
</CustomField>