force-app/main/default/objects/Vehicle__c/fields/Max_days__c.field-meta.xml
<CustomField>
    <fullName>Max_days__c</fullName>
    <label>Max days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>