force-app/main/default/objects/Vehicle__c/fields/Max_is_exceeded__c.field-meta.xml
<CustomField>
    <fullName>Max_is_exceeded__c</fullName>
    <formula>IF(Max_KM__c &lt;= Current_KM__c, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max. is exceeded</label>
    <type>Checkbox</type>
</CustomField>