force-app/main/default/objects/Vehicle__c/fields/Max_is_not_exceeded__c.field-meta.xml
<CustomField>
    <fullName>Max_is_not_exceeded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Max. is not exceeded</label>
    <type>Checkbox</type>
</CustomField>