force-app/main/default/objects/Vehicle__c/fields/Min_is_reached__c.field-meta.xml
<CustomField>
    <fullName>Min_is_reached__c</fullName>
    <formula>IF(Current_KM__c &gt;= Min_KM__c, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Min. is reached</label>
    <type>Checkbox</type>
</CustomField>