force-app/main/default/objects/Vehicle__c/fields/Min_KM__c.field-meta.xml
<CustomField>
    <fullName>Min_KM__c</fullName>
    <label>Min. KM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>