force-app/main/default/objects/Vehicle__c/fields/Minilease_car_sold_timestamp__c.field-meta.xml
<CustomField>
    <fullName>Minilease_car_sold_timestamp__c</fullName>
    <label>Minilease car sold timestamp</label>
    <type>Date</type>
</CustomField>