force-app/main/default/objects/Vehicle__c/fields/Minilease_Carcontrol_Check__c.field-meta.xml
<CustomField>
    <fullName>Minilease_Carcontrol_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Minilease Carcontrol Check</label>
    <type>Checkbox</type>
</CustomField>