force-app/main/default/objects/Vehicle__c/fields/Minilease_Estimated_Rental_Price__c.field-meta.xml
<CustomField>
    <fullName>Minilease_Estimated_Rental_Price__c</fullName>
    <description>Estimated rental price for minilease - per month</description>
    <inlineHelpText>Estimated rental price for minilease - per month</inlineHelpText>
    <label>Minilease Estimated Rental Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>