force-app/main/default/objects/Vehicle__c/fields/Minilease_Pickup_Date__c.field-meta.xml
<CustomField>
    <fullName>Minilease_Pickup_Date__c</fullName>
    <description>When a car is sold for minilease, the pickup date (date when customer will pickup the car) must be entered as information for the infleet process</description>
    <inlineHelpText>date when customer will pickup the car</inlineHelpText>
    <label>Minilease Pickup Date</label>
    <type>Date</type>
</CustomField>