force-app/main/default/objects/Vehicle__c/fields/Minilease_ready_for_sale_timestamp__c.field-meta.xml
<CustomField>
    <fullName>Minilease_ready_for_sale_timestamp__c</fullName>
    <inlineHelpText>Timestamp for minilease when the car is ready for sale</inlineHelpText>
    <label>Minilease car for sale timestamp</label>
    <type>Date</type>
</CustomField>