force-app/main/default/objects/Vehicle__c/fields/Minilease_Reservation_Number__c.field-meta.xml
<CustomField>
    <fullName>Minilease_Reservation_Number__c</fullName>
    <description>reservation number in COBRA</description>
    <inlineHelpText>reservation number in COBRA</inlineHelpText>
    <label>Minilease Reservation Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>