force-app/main/default/objects/Vehicle__c/fields/Minilease_Status__c.field-meta.xml
<CustomField>
    <fullName>Minilease_Status__c</fullName>
    <inlineHelpText>New - new vehicle not yet on the website
Ready for sale - already added to the website
Sold - sold for minilease</inlineHelpText>
    <label>Minilease Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Ready for sale</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>