force-app/main/default/objects/Vehicle__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <description>What model is the car?</description>
    <inlineHelpText>What model is the car?</inlineHelpText>
    <label>Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>