force-app/main/default/objects/Vehicle__c/fields/Model_Name__c.field-meta.xml
<CustomField>
    <fullName>Model_Name__c</fullName>
    <description>model official name as defined in AutoDesktop (and DMR) catalogue</description>
    <inlineHelpText>model official name as defined in AutoDesktop (and DMR) catalogue</inlineHelpText>
    <label>Model Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>