force-app/main/default/objects/Vehicle__c/fields/Navi__c.field-meta.xml
<CustomField>
    <fullName>Navi__c</fullName>
    <label>Navi</label>
    <length>40</length>
    <type>Text</type>
</CustomField>