force-app/main/default/objects/Vehicle__c/fields/Navigation__c.field-meta.xml
<CustomField>
    <fullName>Navigation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Navi</description>
    <label>Navigation</label>
    <type>Checkbox</type>
</CustomField>