force-app/main/default/objects/Vehicle__c/fields/Needs_repair__c.field-meta.xml
<CustomField>
    <fullName>Needs_repair__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the car need repair?</description>
    <inlineHelpText>Does the car need repair?</inlineHelpText>
    <label>Needs repair</label>
    <type>Checkbox</type>
</CustomField>