force-app/main/default/objects/Vehicle__c/fields/Non_standard_Accessories__c.field-meta.xml
<CustomField>
    <fullName>Non_standard_Accessories__c</fullName>
    <description>Udstyr udover std.</description>
    <label>Non-standard Accessories</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>