force-app/main/default/objects/Vehicle__c/fields/notFixedYetDamages__c.field-meta.xml
<CustomField>
    <fullName>notFixedYetDamages__c</fullName>
    <description>Roll-up count of not fixed damages in place.</description>
    <label>Not Fixed Yet Damages</label>
    <summaryFilterItems>
        <field>Damage__c.isFixed__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Damage__c.vehicle__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>