force-app/main/default/objects/Vehicle__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>opportunity to sell the vehicle</description>
    <inlineHelpText>opportunity to sell the vehicle</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Vehicles</relationshipName>
    <type>Lookup</type>
</CustomField>