force-app/main/default/objects/Vehicle__c/fields/Order_no__c.field-meta.xml
<CustomField>
    <fullName>Order_no__c</fullName>
    <label>Order number</label>
    <length>250</length>
    <type>Text</type>
</CustomField>