force-app/main/default/objects/Vehicle__c/fields/Outside_paint__c.field-meta.xml
<CustomField>
    <fullName>Outside_paint__c</fullName>
    <label>Outside paint</label>
    <length>50</length>
    <type>Text</type>
</CustomField>