force-app/main/default/objects/Vehicle__c/fields/Overdue_Cars_Agreed_Date_for_Change__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Cars_Agreed_Date_for_Change__c</fullName>
    <description>Date that was agreed for vehicle change for long term rent cars which needs to be defleeted before end of rent period</description>
    <inlineHelpText>Overdue Cars – aftalt dato for bilbytte</inlineHelpText>
    <label>Overdue Cars – Agreed Date for Change</label>
    <type>Date</type>
</CustomField>