force-app/main/default/objects/Vehicle__c/fields/ownershipTax__c.field-meta.xml
<CustomField>
    <fullName>ownershipTax__c</fullName>
    <label>Ownership Tax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>