force-app/main/default/objects/Vehicle__c/fields/Owning_Country__c.field-meta.xml
<CustomField>
    <fullName>Owning_Country__c</fullName>
    <label>Owning Country</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>