force-app/main/default/objects/Vehicle__c/fields/Parking_sensor__c.field-meta.xml
<CustomField>
    <fullName>Parking_sensor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>P-Sensor</description>
    <label>Parking sensor</label>
    <type>Checkbox</type>
</CustomField>