force-app/main/default/objects/Vehicle__c/fields/Parking_space__c.field-meta.xml
<CustomField>
    <fullName>Parking_space__c</fullName>
    <label>Parking space</label>
    <length>50</length>
    <type>Text</type>
</CustomField>