force-app/main/default/objects/Vehicle__c/fields/Pickup_Date__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Date__c</fullName>
    <description>When is the pickup date for the car?</description>
    <inlineHelpText>When is the pickup date for the car?</inlineHelpText>
    <label>Pickup Date</label>
    <type>Date</type>
</CustomField>