force-app/main/default/objects/Vehicle__c/fields/Pickup_Location__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Pickup Location from Dealer</description>
    <label>Pickup Location</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Pickup Location</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Vehicles (Pickup Location)</relationshipLabel>
    <relationshipName>Vehicles1</relationshipName>
    <type>Lookup</type>
</CustomField>