force-app/main/default/objects/Vehicle__c/fields/Planned_Infleet_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Infleet_Date__c</fullName>
    <label>Planned Infleet Date</label>
    <type>Date</type>
</CustomField>