force-app/main/default/objects/Vehicle__c/fields/Plates_are_removed__c.field-meta.xml
<CustomField>
    <fullName>Plates_are_removed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Only if min. milage is reached</inlineHelpText>
    <label>Plates are removed</label>
    <type>Checkbox</type>
</CustomField>