force-app/main/default/objects/Vehicle__c/fields/Price_Aftermarket_accessories_excl_VAT__c.field-meta.xml
<CustomField>
    <fullName>Price_Aftermarket_accessories_excl_VAT__c</fullName>
    <description>Pris på eftermonteret udstyr excl. moms excl. afgift</description>
    <label>Price Aftermarket accessories excl VAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>