force-app/main/default/objects/Vehicle__c/fields/Prioritized_for_Rental__c.field-meta.xml
<CustomField>
    <fullName>Prioritized_for_Rental__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this car prioritized for rental?</description>
    <inlineHelpText>Is this car prioritized for rental?</inlineHelpText>
    <label>Prioritized for Rental</label>
    <type>Checkbox</type>
</CustomField>