force-app/main/default/objects/Vehicle__c/fields/Prioritized_reason__c.field-meta.xml
<CustomField>
    <fullName>Prioritized_reason__c</fullName>
    <description>Why is this car prioritized for rental?</description>
    <inlineHelpText>Why is this car prioritized for rental?</inlineHelpText>
    <label>Prioritized reason</label>
    <length>50</length>
    <type>Text</type>
</CustomField>