force-app/main/default/objects/Vehicle__c/fields/Production_Number__c.field-meta.xml
<CustomField>
    <fullName>Production_Number__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>vehicle production number, populated from file from Dealer</description>
    <label>Production Number</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>