force-app/main/default/objects/Vehicle__c/fields/propellant__c.field-meta.xml
<CustomField>
    <fullName>propellant__c</fullName>
    <label>Propellant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Propellant</valueSetName>
    </valueSet>
</CustomField>