force-app/main/default/objects/Vehicle__c/fields/Proportional_Registration_Fee__c.field-meta.xml
<CustomField>
    <fullName>Proportional_Registration_Fee__c</fullName>
    <description>Forholds-mæssig reg.afgift
Final tax after deduction * percentage based on period length
calculate in apex</description>
    <inlineHelpText>Forholds-mæssig reg.afgift
Final tax after deduction * percentage based on period length</inlineHelpText>
    <label>Proportional Registration Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>