force-app/main/default/objects/Vehicle__c/fields/Proportional_Registration_Interest__c.field-meta.xml
<CustomField>
    <fullName>Proportional_Registration_Interest__c</fullName>
    <description>Forholds-mæssig rente
interest on Residual tax</description>
    <inlineHelpText>Forholds-mæssig rente
interest on Residual tax</inlineHelpText>
    <label>Proportional Registration Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>