force-app/main/default/objects/Vehicle__c/fields/Radio_code__c.field-meta.xml
<CustomField>
    <fullName>Radio_code__c</fullName>
    <label>Radio code</label>
    <length>250</length>
    <type>Text</type>
</CustomField>