force-app/main/default/objects/Vehicle__c/fields/Range__c.field-meta.xml
<CustomField>
    <fullName>Range__c</fullName>
    <description>how many km the e-car can drive
populated manually by Car Control</description>
    <inlineHelpText>how many km the e-car can drive</inlineHelpText>
    <label>Range</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>