force-app/main/default/objects/Vehicle__c/fields/Rate_code__c.field-meta.xml
<CustomField>
    <fullName>Rate_code__c</fullName>
    <label>Rate code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>