force-app/main/default/objects/Vehicle__c/fields/Re_marketing_Status__c.field-meta.xml
<CustomField>
    <fullName>Re_marketing_Status__c</fullName>
    <label>Re-marketing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ready to sell</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
            <value>
                <fullName>Not sold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>