force-app/main/default/objects/Vehicle__c/fields/Ready_for_distribution_to_station__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_distribution_to_station__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready for distribution to station?</label>
    <type>Checkbox</type>
</CustomField>