force-app/main/default/objects/Vehicle__c/fields/Ready_for_Recalculation__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Recalculation__c</fullName>
    <formula>NOT(OR(
				 Exclude_from_Recalculation__c,
				 Legal_Recalculation_Requested__c,
				 Is_Valuta__c
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>automatically populated, if true the vehicle is part of Recalculation process</inlineHelpText>
    <label>Ready for Recalculation</label>
    <type>Checkbox</type>
</CustomField>