force-app/main/default/objects/Vehicle__c/fields/Ready_for_robot__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_robot__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready for robot</label>
    <type>Checkbox</type>
</CustomField>