force-app/main/default/objects/Vehicle__c/fields/Recalculation_Group__c.field-meta.xml
<CustomField>
    <fullName>Recalculation_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recalculation Group</label>
    <referenceTo>Recalculation_Group__c</referenceTo>
    <relationshipLabel>Vehicles</relationshipLabel>
    <relationshipName>Vehicles</relationshipName>
    <type>Lookup</type>
</CustomField>