force-app/main/default/objects/Vehicle__c/fields/Redemption_Price_to_Leasing_Account__c.field-meta.xml
<CustomField>
    <fullName>Redemption_Price_to_Leasing_Account__c</fullName>
    <description>Redemption price to finance company</description>
    <inlineHelpText>Redemption price to finance company</inlineHelpText>
    <label>Redemption Price to Leasing Account</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>