force-app/main/default/objects/Vehicle__c/fields/Redying_Date__c.field-meta.xml
<CustomField>
    <fullName>Redying_Date__c</fullName>
    <formula>Actual_Infleet_Day__c + 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Redying Date</label>
    <type>Date</type>
</CustomField>