force-app/main/default/objects/Vehicle__c/fields/Registration_document__c.field-meta.xml
<CustomField>
    <fullName>Registration_document__c</fullName>
    <label>Registration document</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Received in HQ</fullName>
            </value>
            <value>
                <fullName>Received at Station</fullName>
            </value>
            <value>
                <fullName>In Car</fullName>
            </value>
            <value>
                <fullName>With Customer</fullName>
            </value>
            <value>
                <fullName>Not found</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>