force-app/main/default/objects/Vehicle__c/fields/Registration_document_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Registration_document_Timestamp__c</fullName>
    <label>Registration document Timestamp</label>
    <type>Date</type>
</CustomField>