force-app/main/default/objects/Vehicle__c/fields/Registration_document_User__c.field-meta.xml
<CustomField>
    <fullName>Registration_document_User__c</fullName>
    <label>Registration document User</label>
    <length>30</length>
    <type>Text</type>
</CustomField>