force-app/main/default/objects/Vehicle__c/fields/Registration_Number_BMW__c.field-meta.xml
<CustomField>
    <fullName>Registration_Number_BMW__c</fullName>
    <description>Registration number for the BMW cars</description>
    <label>Registration Number (BMW)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>