force-app/main/default/objects/Vehicle__c/fields/Remaining_period__c.field-meta.xml
<CustomField>
    <fullName>Remaining_period__c</fullName>
    <label>Remaining period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>