force-app/main/default/objects/Vehicle__c/fields/Required_by_Date__c.field-meta.xml
<CustomField>
    <fullName>Required_by_Date__c</fullName>
    <label>Required by Date</label>
    <type>Date</type>
</CustomField>