force-app/main/default/objects/Vehicle__c/fields/Reservation_number__c.field-meta.xml
<CustomField>
    <fullName>Reservation_number__c</fullName>
    <label>Reservation number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>