force-app/main/default/objects/Vehicle__c/fields/Retail_Price__c.field-meta.xml
<CustomField>
    <fullName>Retail_Price__c</fullName>
    <description>price for retail sale</description>
    <inlineHelpText>price for retail sale</inlineHelpText>
    <label>Retail Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>