force-app/main/default/objects/Vehicle__c/fields/Retail_Price_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Retail_Price_Timestamp__c</fullName>
    <description>last date and time when Retail Price was updated</description>
    <inlineHelpText>last date and time when Retail Price was updated</inlineHelpText>
    <label>Retail Price Timestamp</label>
    <type>DateTime</type>
</CustomField>