force-app/main/default/objects/Vehicle__c/fields/Retail_Sales__c.field-meta.xml
<CustomField>
    <fullName>Retail_Sales__c</fullName>
    <defaultValue>false</defaultValue>
    <description>true - part of Retail Sales and export to webpage</description>
    <inlineHelpText>Shall be sold in Retail?</inlineHelpText>
    <label>Retail Sales</label>
    <type>Checkbox</type>
</CustomField>