force-app/main/default/objects/Vehicle__c/fields/Return_station__c.field-meta.xml
<CustomField>
    <fullName>Return_station__c</fullName>
    <label>Return station</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>