force-app/main/default/objects/Vehicle__c/fields/Return_Station_Account__c.field-meta.xml
<CustomField>
    <fullName>Return_Station_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Return Station (Account)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vehicles (Return Station (Account))</relationshipLabel>
    <relationshipName>VehiclesReturnStation</relationshipName>
    <type>Lookup</type>
</CustomField>