force-app/main/default/objects/Vehicle__c/fields/Return_time__c.field-meta.xml
<CustomField>
    <fullName>Return_time__c</fullName>
    <label>Return time</label>
    <type>Time</type>
</CustomField>