force-app/main/default/objects/Vehicle__c/fields/Sales_Bonus__c.field-meta.xml
<CustomField>
    <fullName>Sales_Bonus__c</fullName>
    <description>bonus per Dealer/Importer</description>
    <inlineHelpText>bonus per Dealer/Importer</inlineHelpText>
    <label>Sales Bonus</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>