force-app/main/default/objects/Vehicle__c/fields/Sales_Delta__c.field-meta.xml
<CustomField>
    <fullName>Sales_Delta__c</fullName>
    <formula>( Sixt_steel_purchase_price__c +  Delivery_cost__c +  handlingCost__c )-  Sales_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Delta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>