force-app/main/default/objects/Vehicle__c/fields/Sales_Price_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Sales_Price_Confirmed__c</fullName>
    <description>Sales Price is confirmed by the Buyer</description>
    <formula>Selected_Vehicle_Calculator__r.Confirmed_Price__c</formula>
    <inlineHelpText>Sales Price is confirmed by the Buyer</inlineHelpText>
    <label>Sales Price Confirmed</label>
    <type>Checkbox</type>
</CustomField>