force-app/main/default/objects/Vehicle__c/fields/Sales_Price_EUR__c.field-meta.xml
<CustomField>
    <fullName>Sales_Price_EUR__c</fullName>
    <description>automatically calculated from Sales Price in DKK, rate can be set in the setup by admin</description>
    <formula>Sales_Price_Formula__c *  $Setup.ConversionRate__c.DKK_to_EUR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>automatically calculated from Sales Price in DKK, rate can be set in the setup by admin</inlineHelpText>
    <label>Estimated remarketing price EUR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>