force-app/main/default/objects/Vehicle__c/fields/Sales_Price_Formula__c.field-meta.xml
<CustomField>
    <fullName>Sales_Price_Formula__c</fullName>
    <formula>Selected_Vehicle_Calculator__r.Remarketing_Price__c</formula>
    <label>Future Value (FV)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>