force-app/main/default/objects/Vehicle__c/fields/Seatbeltalarms__c.field-meta.xml
<CustomField>
    <fullName>Seatbeltalarms__c</fullName>
    <description>Selealarmer, antal</description>
    <label>Seatbeltalarms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>