force-app/main/default/objects/Vehicle__c/fields/Selected_Batch_Calculator__c.field-meta.xml
<CustomField>
    <fullName>Selected_Batch_Calculator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Selected Batch Calculator</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Only Calculators from related Batch and in Selected Status are allowed!</errorMessage>
        <filterItems>
            <field>Batch_Calculator__c.Status__c</field>
            <operation>equals</operation>
            <value>Selected</value>
        </filterItems>
        <infoMessage>Only Calculators from related Batch and in Selected Status are allowed</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Batch_Calculator__c</referenceTo>
    <relationshipName>Vehicles</relationshipName>
    <type>Lookup</type>
</CustomField>