force-app/main/default/objects/Vehicle__c/fields/Selected_Vehicle_Calculator__c.field-meta.xml
<CustomField>
    <fullName>Selected_Vehicle_Calculator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Selected_Vehicle Calculator</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Vehicle_Calculator__c.Vehicle__c</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Vehicle_Calculator__c</referenceTo>
    <relationshipLabel>Vehicles</relationshipLabel>
    <relationshipName>Vehicles</relationshipName>
    <type>Lookup</type>
</CustomField>