force-app/main/default/objects/Vehicle__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <description>VIN number</description>
    <inlineHelpText>VIN</inlineHelpText>
    <label>Serial Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>