force-app/main/default/objects/Vehicle__c/fields/Service_interval_Years_KM__c.field-meta.xml
<CustomField>
    <fullName>Service_interval_Years_KM__c</fullName>
    <description>Serviceinterval (år og km)</description>
    <label>Service interval (Years &amp; KM)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>