force-app/main/default/objects/Vehicle__c/fields/six_mth_owner_tax__c.field-meta.xml
<CustomField>
    <fullName>six_mth_owner_tax__c</fullName>
    <description>Ejerafgift 6 md.</description>
    <label>6 mth Owner tax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>