force-app/main/default/objects/Vehicle__c/fields/Sixt_puchase_price_excl_VAT__c.field-meta.xml
<CustomField>
    <fullName>Sixt_puchase_price_excl_VAT__c</fullName>
    <description>Total Sixt købspris ex. Moms ex. Afgift</description>
    <label>Sixt puchase price excl VAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>