force-app/main/default/objects/Vehicle__c/fields/Sixt_steel_purchase_price__c.field-meta.xml
<CustomField>
    <fullName>Sixt_steel_purchase_price__c</fullName>
    <description>Sixt Indkøbspris stål</description>
    <label>Sixt steel purchase price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>