force-app/main/default/objects/Vehicle__c/fields/Spare_key__c.field-meta.xml
<CustomField>
    <fullName>Spare_key__c</fullName>
    <label>Spare key</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Received in HQ</fullName>
            </value>
            <value>
                <fullName>Received at Station</fullName>
            </value>
            <value>
                <fullName>In Car</fullName>
            </value>
            <value>
                <fullName>With Customer</fullName>
            </value>
            <value>
                <fullName>Not found</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>