force-app/main/default/objects/Vehicle__c/fields/Speed_Pilot__c.field-meta.xml
<CustomField>
    <fullName>Speed_Pilot__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Speed Pilot</label>
    <type>Checkbox</type>
</CustomField>